ShipTech10/app/css/custom.css
/* ... */
@media (max-width: 999px) {
    .form-group {
        display: flex;
        flex-direction: column;
    }

    .control-label {
        padding-left: 0;
    }

    .form_input {
        width: 100% !important;
    }

    .form_input_comment {
        padding-left: 0 !important;
    }

    .multi_lookup_tags {
        position: relative !important;
        left: 0 !important;
    }

    .portlet.light {
        height: auto !important;
    }

    .form_input_productQuantityRequired {
        margin-top: -25px !important;
    }

    .form-group input[class^="_label"] {
        width: 100% !important;
    }

}



/* FOR FIXED VERTICALL SCROLLBAR IN CLC */
.ui-jqgrid-bdiv {
	width: 100% !important;
}
/* FOR FIXED VERTICALL SCROLLBAR IN CLC */

.modal-content td>.formatter.edit_link {
	pointer-events: none !important;
	color: #333 !important;
	text-decoration: none !important;
}

.datePickerDayOfWeek {
    position: absolute;
    height: 100%;
    z-index: 99;
    display: flex;
    align-items: center;
    padding: 5px;
    pointer-events: none;
}

.dateInputHasDayOfWeek {
    padding-left: 40px;
}


div[uib-modal-window] .btn.export_xls, div[uib-modal-window] .btn.export_csv, div[uib-modal-window] .btn.export_pdf {
	display: none;
}



.popover-filter-dates.disabledFromTreasury {
	pointer-events: none;
}
.popover-filter-dates.disabledFromTreasury input, .popover-filter-dates.disabledFromTreasury .date-picker-icon{
	background: #e6eaec;
}


#schedule_calendar_table .dayColumn span.isSapStrategy {
	box-shadow: 0px 2px 0px 0px #000 inset,
				0px 3px 0px 0px #fff inset,
				0px 5px 0px 0px #000 inset 
}

.newStatusColoured.contextmenu {
	border-width: 3px;
	box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.10980392156862745);
    border: 1px solid #bfbfbf;
}
.newStatusColoured.contextmenu .popover-header {
	position: relative;
	padding: 5px;
	padding-right: 20px;
    /*background-color: #ececec;*/
    border-bottom: 1px solid lightgrey;
}

.newStatusColoured.contextmenu .popover-header .close{
    position: absolute;
    background: white;
    z-index: 999;
    opacity: 1;
    right: 4px;
    padding: 4px;
    text-align: center;
    top: 4px;
    box-shadow: 0px 0px 0px 3px #fff;
    box-shadow: 0px 0px 0px 3px #fff;
}
.newStatusColoured.contextmenu .content {
	padding: 10px !important;
}
.newStatusColoured.contextmenu .content .voyageDetailSection table{
	/*width: 100%;*/
}
.newStatusColoured.contextmenu .content .voyageDetailSection{
    overflow: hidden;
    /*border-bottom: 1px solid gainsboro;*/
    /*margin-bottom: 5px;*/
    padding: 1px;
}
.newStatusColoured.contextmenu .content .voyageDetailSection table td, 
.newStatusColoured.contextmenu .content .voyageDetailSection table th {
	padding: 0 5px;
}

.newStatusColoured.contextmenu .content .voyageDetailSection .action-btn{
    float: right;
    padding: 2px 5px;
    margin: 10px 0;	
}
.newStatusColoured.contextmenu .content .cancelBunkerStrategy {
	display: none;
    position: absolute;
    right: -5px;
    top: -8px;
    cursor: pointer;
    line-height: 14px;
    width: 15px;
    height: 15px;
    background: #e05959;
    text-align: center;
    color: #fff;
    border-radius: 100% !important;
    font-size: 10px;
}
.newStatusColoured.contextmenu .content .cancelBunkerStrategyCell:hover .cancelBunkerStrategy {
	display: block;
}
.newStatusColoured {
    font-family: "Roboto";
    font-weight: initial;

}
.productType {
    width: 18px;
    height: 16px;
    font-style: normal;
    font-weight: 300;
    font-size: 12px;
    line-height: 16px;
    color: #646161;
}
.amountRightPopover {
    font-style: normal;
    line-height: 16px;
    font-weight: 500;
    color: #333333;
}

.multiselectcell-show-all-tags {
    position: absolute;
    right: 2px;
    top: 12px;
    line-height: 14px;
    text-align: center;
    width: 19px;
    height: 15px;
    border: 1px solid #c2cad8;
}

.dayColumn .portCode.hasSludgeProduct {
	background-color: #fff;
	display: block;
	color: #000;
}

.footer-general-header .tabs_bar {
	display: none;
}

input[id$="etb_dateinput"] {
    border: 1px solid #c2cad8 !important;
}

input[id$="eta_dateinput"] {
    border: 1px solid #c2cad8 !important;
}

input[id$="etd_dateinput"] {
    border: 1px solid #c2cad8 !important;
}

#group_of_requests_table .productHasOrderLink {
    color: #3598dc;
    cursor: pointer;
}

table.energyCalculationBlade tr.bg-green-jungle td{
	opacity: 0.9;
}
table.energyCalculationBlade tr.border-green-jungle {
    border: 2.5px solid;
}
#grid_labTestResults, #grid_labTestResults .ui-grid-viewport {
	height: auto !important;
}
#grid_labTestResults .ui-grid-viewport {
    overflow: initial !important;
   /* max-height: 500px;*/
    /*margin-bottom: 75px;*/
    border-bottom: 1px solid #e6eaec;
}
#grid_labTestResults .ui-grid-contents-wrapper{
	overflow: hidden;	
}
.multiSelectDestinationPorts {
	position: absolute;
    top: -5px;
    display: block;
    right: 0;
    transform: translate(0%, -100%);
    z-index: 9999;
    background: #fff;
    padding: 10px;
    border: 1px solid #c5cdda;
}
.multiSelectDestinationPorts .label.tag{
	float: left;
	clear: both;
	margin-bottom: 3px;
}

.differentQuotedProduct {
	border: 2px dashed #138052;
}
#gview_flat_delivery_list > div.ui-jqgrid-hdiv.ui-state-default.ui-corner-top > div > table > thead > tr > th > div.ui-jqgrid-sortable {
    height: 62px;
}
#orderVerificationReq {
    width: 96.9%;
}

.vis-timeline .earliestEtaDashed .expand-voyages {
	display: none;
}

.vesselToWatchFlag {
	color: #fff;
    background: #f29b4e;
    width: 20px;
    height: 20px;
    vertical-align: middle;
    text-align: center;
    line-height: 20px !important;
    border-radius: 1000px;
    font-size: 12px;
}

.fakeDisabledReport {
	opacity: 0.5;
	cursor: default !important;
}

#hierarchical-tree .search-list {
    border-left: 1px dashed #364150;
    padding-left: 15px;
}


#hierarchical-tree .search-list-user {
    padding-left: 15px;
}
/* ... */

